--- a/public/styles/bantuan/bantuan.css
+++ b/public/styles/bantuan/bantuan.css
@@ -16,6 +16,9 @@ p{
     position: relative;
     width: 100%;
 }
+.row{
+    margin: 0;
+}
 .onboarding-container {
     position: relative;
     padding: 100px;
