--- a/public/styles/pesantiket/pesantiket.css
+++ b/public/styles/pesantiket/pesantiket.css
@@ -364,7 +364,7 @@ p{
     justify-content: space-between;
     align-items: center;
   }
-  form{
+  .form{
       width: 241px;
     height: 310px;
     display: flex;
