--- a/public/styles/pasangacara/pasangacara.css
+++ b/public/styles/pasangacara/pasangacara.css
@@ -13,6 +13,18 @@
     position: relative;
 }
 
+.spinner-border {
+    top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    margin-top: auto;
+    right: 0;
+    bottom: 0;
+    margin-bottom: auto;
+    position: fixed;
+}
+
 .background-image {
     position: absolute;
     width: max-content;
