--- a/public/styles/pesantiket/pesantiket.css
+++ b/public/styles/pesantiket/pesantiket.css
@@ -408,13 +408,17 @@ input[type=range]:focus::-ms-fill-upper {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-items: center;
     height: 790.44px;
-    overflow-y: scroll;
 }
 
 .card {
     border-radius: 10px !important;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.05), 0 6px 20px 0 rgba(0, 0, 0, 0.05);
     height: 331px;
+}
+
+#search {
+    opacity: 0;
+    visibility: hidden;
 }
 
 .card img {
@@ -509,4 +513,9 @@ form label {
     border: none;
     border-bottom-right-radius: 17px;
     border-top-right-radius: 17px;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
 }
