--- a/public/styles/template/template.css
+++ b/public/styles/template/template.css
@@ -121,6 +121,14 @@ a:hover {
     box-sizing: border-box;
 }
 
+body {
+    background-color: white !important;
+}
+
+#collapseOne {
+    /* position: absolute; */
+}
+
 .header {
     position: relative;
     box-shadow: 0px 2px 5px #ebebeb;
