--- a/public/styles/tiket/tiket.css
+++ b/public/styles/tiket/tiket.css
@@ -136,6 +136,19 @@ label {
     margin: 0px !important;
 }
 
+.spinner-border {
+    display: none;
+    top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    margin-top: auto;
+    right: 0;
+    bottom: 0;
+    margin-bottom: auto;
+    position: fixed;
+}
+
 .form-2>.input>input {
     width: 800px;
     max-width: 100%;
